k8s/home/omada/templates/ingressroutetcp.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: omada-headers
  namespace: traefik-system
spec:
  headers:
    customRequestHeaders:
      Host: omada.fmlab.no:8043
    customResponseHeaders:
      Host: omada.fmlab.no:443

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroute-tcp
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`omada.fmlab.no`)
    middlewares:
      - name: headers
    services:
      - name: omada-http
        port: 8043
  tls:
    passthrough: true
